Update 'i1qv9j0aa-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:fc937d76b02fa6d635c4c4189b0e2fa2eec9c03e@sha256:876a61e6bdee098692bb729dd18a5428ae54be8e341781d8415d2b14b2b90336

--- a/components/i1qv9j0aa-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/i1qv9j0aa-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: i1qv9j0aa-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:fc937d76b02fa6d635c4c4189b0e2fa2eec9c03e@sha256:876a61e6bdee098692bb729dd18a5428ae54be8e341781d8415d2b14b2b90336
+          name: container-image
